--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <a class="nav-link" href="#biografia">Bio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#blog">Noticias</a>
+                    </li> 
+                    <li class="nav-item">
                         <a class="nav-link" href="#testimonial">Testimonios</a>
                     </li> 
                     <li class="nav-item">
@@ -318,18 +321,18 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row align-items-center text-white">
-
-                            <div class="col-md-4 offset-md-2 col-sm-6" data-aos="fade-right">
-                                <h4 class="mb-4" id="JS">Joaquín Surroca</h4>
+                            <div class="col-md-8 offset-md-2 col-sm-8" data-aos="fade-right">
+                                <div class="" data-aos="fade-left">
+                                    <img class="my-5" src="img/js-img-profile.png" alt="js" id="js-img-bio">
+                                </div>
+                                <h4 class="mb-4" id="JS">Ing. Joaquín Surroca</h4> 
                                 <p id="js-bio">Líder, visionario y emprendedor con un historial comprobado de éxito en su carrera académica como rector de la Universidad Provincial de Oficios (UPRO). <br><br>
                                     Con una sólida formación en educación y gestión, Surroca ha dedicado su vida a mejorar la calidad de vida de la comunidad a través de la educación y la capacitación de los jóvenes y adultos en la provincia de San Luis.<br><br>
                                     Como candidato a intendente de la ciudad de Villa Mercedes, Surroca promete llevar su visión y experiencia al servicio público para abordar los desafíos clave que enfrenta la ciudad, como la creación de empleo, la mejora de la infraestructura y el fomento de la educación y el desarrollo económico local. <br> <br> 
                                     Con una visión clara y compromiso para servir a su comunidad, Surroca busca hacer una diferencia real en la vida de los habitantes de Villa Mercedes y convertirse en un líder transformador en la región.</p> 
                             </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
 
-                            <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
-                                <img class="my-5" src="img/DSC_1486.jpg" alt="js">
-                            </div><!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
+                           <!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
 
                         </div><!--/ .featurettes-item -->
 
@@ -340,6 +343,131 @@
         </div><!--/ .container -->
 
     </section>
+    <!-- Blog Section -->
+<section id="blog" class="bg-grey">
+    <div class="container">
+        <div class="section-content">
+            <div class="title-wrap mb-5" data-aos="fade-up">
+                <h2 class="section-title">Ultimas <b>Noticias</b></h2>
+                <p class="section-sub-title">Una breve descripcion de la pagina de noticias.</p>
+            </div>
+            <div class="row">
+                <!-- Blog -->
+                <div class="col-md-12 blog-holder">
+                    <div class="row">
+                        <!-- Blog Item -->
+                        <div class="col-md-4 blog-item-wrapper" data-aos="fade-up">
+                            <div class="blog-item">
+                                <div class="blog-img">
+                                    <a href="single.html"><img src="img/DSC_1486.jpg" alt=""></a>
+                                </div>
+                                <div class="blog-text">
+                                    <div class="blog-tag">
+                                        <a href="#"><h6><small>Upro</small></h6></a>
+                                    </div>
+                                    <div class="blog-title">
+                                        <a href="single.html"><h4>Increible Noticia</h4></a>
+                                    </div>
+                                    <div class="blog-meta">
+                                        <p class="blog-date">13 marzo 2023</p> /
+                                        <p class="blog-comment"><a href="">23 Comments</a></p>
+                                    </div>
+                                    <div class="blog-desc">
+                                        <p>breve descripcion de la noticia.</p>
+                                    </div>
+                                    <div class="blog-author">
+                                        <p>by Jzepol</p>
+                                    </div>
+                                    <div class="blog-share-wrapper">
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-twitter-square"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End of Blog Item -->
+                        <!-- Blog Item -->
+                        <div class="col-md-4 blog-item-wrapper" data-aos="fade-up" data-aos-delay="200">
+                            <div class="blog-item">
+                                <div class="blog-img">
+                                    <a href="#"><img src="img/_DSC1861.jpg" alt=""></a>
+                                </div>
+                                <div class="blog-text">
+                                    <div class="blog-tag">
+                                        <a href="#"><h6><small>Politica</small></h6></a>
+                                    </div>
+                                    <div class="blog-title">
+                                        <a href="#"><h4>Union Estrategica</h4></a>
+                                    </div>
+                                    <div class="blog-meta">
+                                        <p class="blog-date">30 May 2023</p> /
+                                        <p class="blog-comment"><a href="">23 Comments</a></p>
+                                    </div>
+                                    <div class="blog-desc">
+                                        <p>Joaco y el Gato se unen</p>
+                                    </div>
+                                    <div class="blog-author">
+                                        <p>by Morinacho</p>
+                                    </div>
+                                    <div class="blog-share-wrapper">
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-twitter-square"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End of Blog Item -->
+                        <!-- Blog Item -->
+                        <div class="col-md-4 blog-item-wrapper" data-aos="fade-up" data-aos-delay="400">
+                            <div class="blog-item">
+                                <div class="blog-img">
+                                    <a href="#"><img src="img/taller.jpg" alt=""></a>
+                                </div>
+                                <div class="blog-text">
+                                    <div class="blog-tag">
+                                        <a href="#"><h6><small>Trabajo</small></h6></a>
+                                    </div>
+                                    <div class="blog-title">
+                                        <a href="#"><h4>Talleres</h4></a>
+                                    </div>
+                                    <div class="blog-meta">
+                                        <p class="blog-date">12 Marzo 2023</p> /
+                                        <p class="blog-comment"><a href="">23 Comments</a></p>
+                                    </div>
+                                    <div class="blog-desc">
+                                        <p>Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    </div>
+                                    <div class="blog-author">
+                                        <p>by John Doe</p>
+                                    </div>
+                                    <div class="blog-share-wrapper">
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                        <a class="blog-share" href="google.com">
+                                            <i class="fab fa-twitter-square"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End of Blog Item -->
+                    </div>
+                </div>
+                <!-- End of Blog -->
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End of Blog Section -->
     <section id="testimonial" class="section-padding bg-fixed bg-white overlay"
         style="background-image: url(img/bg-white.jpg);">
         <div class="container">
