--- a/index.html
+++ b/index.html
@@ -800,6 +800,133 @@
                 <div class="row" data-aos="fade-up"> 
                     <!-- Testimonial -->
                     <div class="testi-content testi-carousel owl-carousel" id="card-propuesta-container">
+                        <div class="testi-item text-center card-propuesta grupoElectoral">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/Melisa Persa.jpg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MELISA PERSA - Viceintendenta </a></h3>
+                                    <p>32 años. Licenciada en Administración, egresada en Villa Mercedes en la FACEJYS.</p> 
+                                    <p>Ha trabajado en comercios e industrias.</p>
+                                    <p>Ingreso a UPRO a finales del 2016, realizando una carrera en la gestión de la institución.</p>
+                                    <p>En 2019 que asumió como Secretaria General</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/NadiaTorres.jpeg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">NADIA SOLEDAD TORRES - Diputada Provincial
+                                    </a></h3>
+                                    <p>36 años. Concejal de Villa Mercedes (Mandato Cumplido).</p> 
+                                    <p>Experiencia laboral en la función pública provincial y municipal en temáticas vinculadas a juventudes violencia institucional, género y diversidad.
+                                    </p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/nazarenaechnia.jpeg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MARIA NAZARENA ECHANDIA - Concejal</a></h3>
+                                    <p>25 años. Licenciada en Trabajo Social y estudiante de posgrado en la UNSL.</p> 
+                                    <p>Ha trabajado en comercios e industrias.</p>
+                                    <p>Ingreso a UPRO a finales del 2016, realizando una carrera en la gestión de la institución.</p>
+                                    <p>En 2019 que asumió como Secretaria General</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/ceciliamartinez.jpeg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">CECILIA MARTINEZ - Tribunal de Contralor </a></h3>
+                                    <p>43 años. Villamercedina. Peronista. Lic. En Administración..</p> 
+                                    <p>Considera que la política es la principal herramienta de transformación social.</p>
+                                    <p>Ha trabajado en el sector privado y desde hace ocho años trabajo en la UPrO, donde ha desempeñado varias funciones y actualmente es Secretaría Académica.
+                                    </p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/Melisa Persa.jpg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MELISA PERSA - Viceintendenta </a></h3>
+                                    <p>52 años. Médico Generalista.Recibido de la Universidad nacional de Córdoba. 25 años de profesión.</p> 
+                                    <p>Trabaja desde hace 12 años en APS de Villa Mercedes.</p>
+                                    <p>Actualmente trabaja en el caps Llorente Ruiz, cómo médico y director.</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">PIÑERO MANUEL - DIPUTADO PROVINCIAL </a></h3>
+                                    <p>32 años. Licenciada en Administración, egresada en Villa Mercedes en la FACEJYS.</p> 
+                                    <p>Ha trabajado en comercios e industrias.</p>36 años. Concejal de Villa Mercedes (Mandato Cumplido) 
+                                    <p>Ingreso a UPRO a finales del 2016, realizando una carrera en la gestión de la institución.</p>
+                                    <p>En 2019 que asumió como Secretaria General</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">LUCERO MARIA EUGENIA - DIPUTADO PROVINCIAL </a></h3>
+                                    <p>Trayectoria: Secretaria de la Mujer, Educación,</p> 
+                                    <p>Salud. Ex jefa del centro de salud N1 Juan Domingo Perón Atención Primaria de la Salud.</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MILONI LUCAS GASTÓN - DIPUTADO PROVINCIAL</a></h3>
+                                    <p>44 años. Nacido en Villa Mercedes, Ingeniero electromecánico. Recibido en la Universidad Nacional de San Luis.</p> 
+                                    <p>Posee una pyme de servicios de ingeniería y obra la cual trabaja para varias industrias en el ámbito privado.</p>
+                                    <p>Actualmente Jefe del programa proyectos y consultoría de Upro.</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/copetti.jpeg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">COPETTI MARIA ANTONELLA - DIPUTADO PROVINCIAL</a></h3>
+                                    <p>36 años. Chef de Alta cocina especialista en pastelería creativa.</p> 
+                                    <p>Actualmente instructora del curso anual de cocina profesional e internacional en la UPrO.</p>
+                                    <p>más de 10 años ejercicio profesional.</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/Melisa Persa.jpg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MELISA PERSA - Viceintendenta </a></h3>
+                                    <p>32 años. Licenciada en Administración, egresada en Villa Mercedes en la FACEJYS.</p> 
+                                    <p>Ha trabajado en comercios e industrias.</p>
+                                    <p>Ingreso a UPRO a finales del 2016, realizando una carrera en la gestión de la institución.</p>
+                                    <p>En 2019 que asumió como Secretaria General</p>
+                                </section>
+                            </article> 
+                        </div>
+                        <div class="testi-item text-center card-propuesta">
+                            <article id="cards-container">
+                                <section class="card-candidatos">
+                                    <img class="card-background-candidatos" src="./img/Melisa Persa.jpg" alt="" style="width: 500px;">
+                                    <h3><a href="${pageLink}" class="card-link" target="_blank">MELISA PERSA - Viceintendenta </a></h3>
+                                    <p>32 años. Licenciada en Administración, egresada en Villa Mercedes en la FACEJYS.</p> 
+                                    <p>Ha trabajado en comercios e industrias.</p>
+                                    <p>Ingreso a UPRO a finales del 2016, realizando una carrera en la gestión de la institución.</p>
+                                    <p>En 2019 que asumió como Secretaria General</p>
+                                </section>
+                            </article> 
+                        </div>
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
