cards images candidates

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/Propuesta 1.jpg" alt="">
+                                    <img class="card-background-candidatos" src="./img/Melisa Persa.jpg" alt="" style="width: 500px;">
                                     <h3><a href="${pageLink}" class="card-link" target="_blank">MELISA PERSA - Viceintendenta </a></h3>
                                     <p>32 años. Licenciada en Administración, egresada en Villa Mercedes en la FACEJYS.</p> 
                                     <p>Ha trabajado en comercios e industrias.</p>
