--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
+                                    <img class="card-background-candidatos" src="./img/fmathot.jpeg" alt="" >
                                     <h3><a href="#" class="card-link" target="_blank">FATIMA BELÉN MATHOT<br>Diputada Provincial</a></h3>
                                     <p>28 años. Chef de alta cocina y asesora gastronómica, con diferentes especializaciones como panadería y pastelería.</p> 
                                     <p>Referente de los cursos de gastronomía de la UPrO, donde además es instructora.</p> 
@@ -888,7 +888,7 @@
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
+                                    <img class="card-background-candidatos" src="./img/mlucero.jpeg" alt="" >
                                     <h3><a href="#" class="card-link" target="_blank">MARIA EUGENIA LUCERO<br>Diputada Provincial</a></h3>
                                     <p>40 años. Lic. en Trabajo Social. Recibida en la Universidad Nacional de San Luis.</p> 
                                     <p>Trayectoria: Secretaria de la Mujer, Educación, Salud.  Ex jefa del centro de salud N1 Juan Domingo Perón Atención Primaria de la Salud.</p> 
@@ -898,7 +898,7 @@
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
+                                    <img class="card-background-candidatos" src="./img/lmaimone.jpeg" alt="" >
                                     <h3><a href="#" class="card-link" target="_blank">LEONARDO GASTÓN MAIMONE<br>Diputado Provincial</a></h3>
                                     <p>38 años. Ing. Electricista Electrónico, recibido en la UNSL, anteriormente trabajando bajo relación de dependencia y posteriormente independiente brindando asesoramiento, proyectos y supervisión de obras eléctricas.</p> 
                                     <p> Actualmente coordinador técnico en UPrO desde hace 3 años.</p> 
