--- a/index.html
+++ b/index.html
@@ -908,30 +908,27 @@
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
-                                    <h3><a href="#" class="card-link" target="_blank">LUCAS GASTÓN MILONI<br>Diputado Provincial</a></h3>
-                                    <p>44 años. Nacido en Villa Mercedes, Ingeniero electromecánico.</p> 
-                                    <p>Recibido en la Universidad Nacional de San Luis. Posee una pyme de servicios de ingeniería y obra la cual trabaja para varias industrias en el ámbito privado.</p>
-                                    <p>Actualmente Jefe del programa proyectos y consultoría de Upro.</p> 
+                                    <img class="card-background-candidatos" src="./img/nazarenaechnia.jpeg" alt="" >
+                                    <h3><a href="#" class="card-link" target="_blank">MARIA NZARENA ECHANDIA<br>Concejal</a></h3>
+                                    <p>25 años. Licenciada en Trabajo Social y estudiante de posgrado en la UNSL.</p> 
+                                    <p>Experiencia laboral en la función pública provincial y municipal en temáticas vinculadas a juventudes, violencia institucional, género y diversidad.</p> 
                                 </section>
                             </article> 
                         </div>
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
-                                    <h3><a href="#" class="card-link" target="_blank">LUCAS GASTÓN MILONI<br>Diputado Provincial</a></h3>
-                                    <p>44 años. Nacido en Villa Mercedes, Ingeniero electromecánico.</p> 
-                                    <p>Recibido en la Universidad Nacional de San Luis. Posee una pyme de servicios de ingeniería y obra la cual trabaja para varias industrias en el ámbito privado.</p>
-                                    <p>Actualmente Jefe del programa proyectos y consultoría de Upro.</p> 
+                                    <img class="card-background-candidatos" src="./img/ngodoy.jpeg" alt="" >
+                                    <h3><a href="#" class="card-link" target="_blank">LIDIA NOEMÍ GODOY<br>Consejal</a></h3>
+                                    <p>60 años. Ama de casa, trabaja en UPrO como personal de limpieza maestranza.</p> 
                                 </section>
                             </article> 
                         </div>
                         <div class="testi-item text-center card-propuesta">
                             <article id="cards-container">
                                 <section class="card-candidatos">
-                                    <img class="card-background-candidatos" src="./img/miloni.jpeg" alt="" >
-                                    <h3><a href="#" class="card-link" target="_blank">LUCAS GASTÓN MILONI<br>Diputado Provincial</a></h3>
+                                    <img class="card-background-candidatos" src="./img/pgavilan.jpeg" alt="" >
+                                    <h3><a href="#" class="card-link" target="_blank">PABLO MATÍAS GAVILÁN<br>Consejal</a></h3>
                                     <p>44 años. Nacido en Villa Mercedes, Ingeniero electromecánico.</p> 
                                     <p>Recibido en la Universidad Nacional de San Luis. Posee una pyme de servicios de ingeniería y obra la cual trabaja para varias industrias en el ámbito privado.</p>
                                     <p>Actualmente Jefe del programa proyectos y consultoría de Upro.</p> 
